--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -51,47 +51,12 @@
     }
     
     .logo {
-        display: flex;
-        align-items: center;
-        gap: 4px;
+        @media (max-width: 1023px) {
+            margin-left: -8px; 
 
-        img {
-            height: 24px;
-            width: auto;
-        }
-
-        .logo-text {
-            font-family: 'Inter', sans-serif;
-            font-size: 20px;
-            font-weight: 700;
-            margin-left: 4px;
-            position: relative;
-            display: flex;
-            align-items: center;
-            letter-spacing: 0.8px;
-
-            .tm {
-                font-size: 16px;
-                font-weight: 700;
-                margin-left: 2px;
-                vertical-align: super;
-            }
-        }
-
-        img[src*="logo-dark"] + .logo-text {
-            color: #ffffff;
-        }
-
-        img[src*="g10"] + .logo-text {
-            color: #1E274A;
         }
     }
 
-    &.header-dark {
-        .logo-text {
-            color: #ffffff;
-        }
-    }
 
     .main-menu {
         display: flex;
