--- a/src/components/Header/Header_old.scss
+++ b/src/components/Header/Header_old.scss
@@ -47,19 +47,18 @@
     
     .container {
         @media (max-width: 1023px) {
-            // padding: 0 36px;
+            padding: 0 36px;
         }
     }
     
     .logo-container {
         display: flex;
         align-items: center;
-        min-height: 53px;
     }
     
     .logo {
         @media (max-width: 1023px) {
-            // margin-left: -8px; 
+            margin-left: -8px; 
 
         }
     }
